--- a/managestaff.html
+++ b/managestaff.html
@@ -11,10 +11,10 @@
     <h1></h1>
     <center><button class="back-button">Back to Dashboard</button></center>
     <div class="container">
-        <h1>Staff Management System</h1>
+        <h1>Admin Management System</h1>
         
         <section id="add-employee">
-            <h2>Add Staff</h2>
+            <h2>Add admin</h2>
             <form id="addForm">
                 <label for="emp_id">Staff ID:</label>
                 <input type="number" id="emp_id" required><br>
@@ -24,6 +24,8 @@
                 <input type="text" id="position" required><br>
                 <label for="salary">Salary:</label>
                 <input type="number" id="salary" required><br>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required><br>
                 <label for="image">Image:</label>
                 <input type="file" id="image" required><br>
                 <button type="submit">Add Staff</button>
