--- a/managestaff.html
+++ b/managestaff.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="managestaff.css">
 </head>
 <body>
-    <h1></h1>
     <center><button class="back-button" onclick="window.location.href='admindashboard.html'">Back to Dashboard</button></center>
+    
     <div class="container">
         <h1>Admin Management System</h1>
         
         <section id="add-employee">
-            <h2>Add admin</h2>
+            <h2>Add Admin</h2>
             <form id="addForm">
                 <label for="emp_id">Staff ID:</label>
                 <input type="number" id="emp_id" required><br>
@@ -25,7 +25,7 @@
                 <label for="salary">Salary:</label>
                 <input type="number" id="salary" required><br>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br>
+                <input type="password" id="password" required><br>
                 <label for="image">Image:</label>
                 <input type="file" id="image" required><br>
                 <button type="submit">Add Staff</button>
@@ -46,50 +46,9 @@
                     </tr>
                 </thead>
                 <tbody id="employeeTable">
-                    <tr>
-                        <td>1</td>
-                        <td>Adlina Nazrul Muhaimin</td>
-                        <td>Manager</td>
-                        <td>RM 5000</td>
-                        <td><img src="image/adlina.jpg" alt="Adlina" width="50"></td>
-                        <td>
-                            <button>Edit</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Khairul Iman</td>
-                        <td>Developer</td>
-                        <td>RM 4000</td>
-                        <td><img src="image/khai.jpg" alt="Khairul" width="50"></td>
-                        <td>
-                            <button>Edit</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Wan Irfan Iman</td>
-                        <td>Designer</td>
-                        <td>RM 4000</td>
-                        <td><img src="image/irfan.jpg" alt="Wan Irfan" width="50"></td>
-                        <td>
-                            <button>Edit</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
+                    <!-- Staff details will be dynamically inserted here -->
                 </tbody>
             </table>
-        </section>
-
-        <section id="admin-list">
-            <h2>Admin List</h2>
-            <ul>
-                <li>Adlina Nazrul Muhaimin</li>
-                <li>Khairul Iman</li>
-                <li>Wan Irfan Iman</li>
-            </ul>
         </section>
     </div>
 
