--- a/managestaff.html
+++ b/managestaff.html
@@ -18,8 +18,10 @@
             <form id="addForm">
                 <label for="emp_id">Staff ID:</label>
                 <input type="number" id="emp_id" required><br>
-                <label for="name">Name:</label>
-                <input type="text" id="name" required><br>
+                <label for="name">Username:</label>
+                <input type="text" id="username" required><br>
+                <label for="salary">Email:</label>
+                <input type="number" id="email" required><br>
                 <label for="position">Position:</label>
                 <input type="text" id="position" required><br>
                 <label for="salary">Salary:</label>
@@ -38,7 +40,8 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Name</th>
+                        <th>Username</th>
+                        <th>Email</th>
                         <th>Position</th>
                         <th>Salary</th>
                         <th>Image</th>
