--- a/managestaff.html
+++ b/managestaff.html
@@ -18,10 +18,10 @@
             <form id="addForm">
                 <label for="emp_id">Staff ID:</label>
                 <input type="number" id="emp_id" required><br>
-                <label for="name">Username:</label>
+                <label for="username">Username:</label>
                 <input type="text" id="username" required><br>
-                <label for="salary">Email:</label>
-                <input type="text" id="email" required><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" required><br>
                 <label for="position">Position:</label>
                 <input type="text" id="position" required><br>
                 <label for="salary">Salary:</label>
