--- a/managecategory.html
+++ b/managecategory.html
@@ -5,21 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Product Categories</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .modal { display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); }
-        .modal-content { background-color: white; margin: 10% auto; padding: 20px; border-radius: 5px; width: 40%; text-align: center; }
-        .close { color: red; float: right; font-size: 28px; font-weight: bold; cursor: pointer; }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        table, th, td { border: 1px solid #ccc; }
-        th, td { padding: 10px; text-align: left; }
-        .action-button { background-color: #4CAF50; color: white; padding: 8px 16px; text-decoration: none; border: none; cursor: pointer; }
-        .action-button:hover { background-color: #45a049; }
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        .action-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-right: 10px;
+        }
+
+        .action-button:hover {
+            background-color: #45a049;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: #fff;
+            margin-top: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        th, td {
+            padding: 12px;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 999;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 500px;
+            position: relative;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+        }
+
+        .close {
+            color: #aaa;
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover {
+            color: red;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        @media (max-width: 600px) {
+            .action-button {
+                width: 100%;
+                margin-top: 10px;
+            }
+        }
     </style>
 </head>
 <body>
+
     <h2>Manage Product Categories</h2>
     <a class="action-button" href="#">Back to Dashboard</a>
-    <br><br>
     <button class="action-button" id="addCategoryBtn">Add New Category</button>
 
     <table>
@@ -31,15 +125,16 @@
         </thead>
         <tbody>
             <?php
-            // Connect to DB
             $conn = new mysqli("localhost", "root", "", "gaming_store");
-            if ($conn->connect_error) { die("Connection failed: " . $conn->connect_error); }
+            if ($conn->connect_error) {
+                die("Connection failed: " . $conn->connect_error);
+            }
 
             $sql = "SELECT category_name, description FROM product_categories";
             $result = $conn->query($sql);
             if ($result->num_rows > 0) {
                 while ($row = $result->fetch_assoc()) {
-                    echo "<tr><td>".htmlspecialchars($row['category_name'])."</td><td>".htmlspecialchars($row['description'])."</td></tr>";
+                    echo "<tr><td>" . htmlspecialchars($row['category_name']) . "</td><td>" . htmlspecialchars($row['description']) . "</td></tr>";
                 }
             } else {
                 echo "<tr><td colspan='2'>No categories found.</td></tr>";
@@ -53,31 +148,33 @@
     <div id="categoryModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Add Category</h2>
+            <h3>Add New Category</h3>
             <form id="categoryForm" method="POST" action="add_category.php">
-                <label for="categoryName">Category Name:</label><br>
-                <input type="text" name="categoryName" required><br><br>
-                <label for="categoryDescription">Description:</label><br>
-                <input type="text" name="categoryDescription" required><br><br>
+                <label for="categoryName">Category Name:</label>
+                <input type="text" name="categoryName" id="categoryName" required>
+
+                <label for="categoryDescription">Description:</label>
+                <input type="text" name="categoryDescription" id="categoryDescription" required>
+
                 <button type="submit" class="action-button">Save</button>
             </form>
         </div>
     </div>
 
     <script>
-        var modal = document.getElementById("categoryModal");
-        var addCategoryBtn = document.getElementById("addCategoryBtn");
-        var closeBtn = document.getElementsByClassName("close")[0];
+        const modal = document.getElementById("categoryModal");
+        const addCategoryBtn = document.getElementById("addCategoryBtn");
+        const closeBtn = document.getElementsByClassName("close")[0];
 
-        addCategoryBtn.onclick = function() {
+        addCategoryBtn.onclick = function () {
             modal.style.display = "block";
         }
 
-        closeBtn.onclick = function() {
+        closeBtn.onclick = function () {
             modal.style.display = "none";
         }
 
-        window.onclick = function(event) {
+        window.onclick = function (event) {
             if (event.target == modal) {
                 modal.style.display = "none";
             }
