--- a/custregister.html
+++ b/custregister.html
@@ -381,6 +381,8 @@
             .address-fields {
                 grid-template-columns: 1fr;
             }
+
+            
             
             #menuContainer {
                 width: 100%;
@@ -432,11 +434,11 @@
             <form id="registrationForm" action="register_customer.php" method="post">
                 <div class="form-group">
                     <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first_name" name="first_name" required>
+                    <input type="text" id="first-name" name="first-name" required>
                 </div>
                 <div class="form-group">
                     <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last_name" name="last_name" required>
+                    <input type="text" id="last-name" name="last-name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">EMAIL</label>
