--- a/TOS.html
+++ b/TOS.html
@@ -420,11 +420,11 @@
             <div class="logo" onclick="window.location.href='index.html'">NEXUS</div>
             
             <div class="nav-links">
-                <a href="index.html">HOME</a>
-                <a href="NINTENDO.html">NINTENDO</a>
-                <a href="XBOX.html">CONSOLES</a>
-                <a href="ACCESSORIES.html">ACCESSORIES</a>
-                <a href="VR.html">VR</a>
+                <a href="index">HOME</a>
+                <a href="NINTENDO.php">NINTENDO</a>
+                <a href="XBOX.php" class="active">CONSOLES</a>
+                <a href="ACCESSORIES.php">ACCESSORIES</a>
+                <a href="VR.php">VR</a>
             </div>
             
             <div class="icons-right">
