--- a/custregister.html
+++ b/custregister.html
@@ -434,11 +434,11 @@
             <form id="registrationForm" action="register_customer.php" method="post">
                 <div class="form-group">
                     <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first-name" name="first-name" required>
+                    <input type="text" id="first-name" name="first_name" required>
                 </div>
                 <div class="form-group">
                     <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last-name" name="last-name" required>
+                    <input type="text" id="last-name" name="last_name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">EMAIL</label>
